--- a/index.html
+++ b/index.html
@@ -60,30 +60,31 @@
 					<td id="td-sj1a" class="cat1 sjtable sjitem rift not">Create a new seasonal character</td>
 					<td id="td-sj2a" class="cat2 sjtable sjitem rift not">Choose your leveling strategy <br><b>(Tip #3)</td>
 					<td id="td-sj3a" class="cat3 sjtable sjitem rift not">Lvl 40: Craft/enchant lvl 70 2h mace with reduced level req. <br><b>(Tip #5)</b></td>
-					<td id="td-sj4a" class="cat4 sjtable sjitem rift not">Complete the Season Journey and claim your reward class set</td>
+					<td id="td-sj4a" class="cat4 sjtable sjitem rift not">Complete the Season Journey and claim your reward class set (if needed)</td>
 				</tr>
 
 				<tr class="sjtable">
 					<td id="td-sj1b" class="cat1 sjtable sjitem rift not">Complete challenge rift and open reward bag <br><b>(Tip #1)</b></td>
 					<td id="td-sj2b" class="cat2 sjtable sjitem rift not">Lvl 7/10: Check "fence" vendors for +dmg jewlery and other items</td>
 					<td id="td-sj3b" class="cat3 sjtable sjitem rift not">Lvl 61: Craft armor and weapons at Blacksmith</td>
-					<td id="td-sj4b" class="cat4 sjtable sjitem rift not">Run low-level Greater Rifts to get Legendary Gems</td>
+					<td id="td-sj4b" class="cat4 sjtable sjitem rift not">Run low-level Greater Rifts to get legendary gems</td>
 				</tr>
 
 				<tr class="sjtable">
 					<td id="td-sj1c" class="cat1 sjtable sjitem rift not">Switch to Master difficulty<br>Equip a pet, wings, and portrait</td>
 					<td id="td-sj2c" class="cat2 sjtable sjitem rift not">Lvl 8: Craft a 2h weapon at blacksmith and socket ruby on helm</td>
 					<td id="td-sj3c" class="cat3 sjtable sjitem rift not">Lvl 70: Equip your fourth passive skill</td>
-					<td id="td-sj4c" class="cat3 sjtable sjitem rift not">If you have the gold, buy the Hellfire Amulet/Ring plans from Squirt in Act II town</td>
+					<td id="td-sj4c" class="cat4 sjtable sjitem rift not">Run boss bounties to stock up on regular gems</td>
 				</tr>
 
 				<tr class="sjtable">
 					<td id="td-sj1d" class="cat1 sjtable sjitem rift not">Hire templar, take his weapon, give him enchantress weapon</td>
 					<td id="td-sj2d" class="cat2 sjtable sjitem rift not">Lvl 10: Equip your first passive skill</td>
+					<td id="td-sj3d" class="cat3 sjtable sjitem rift not">If you have the gold, buy the Hellfire Amulet/Ring plans from Squirt in Act II town</td>
 				</tr>
 
 				<tr class="sjtable">
-					<td id="td-sj1e" class="cat1 sjtable sjitem rift not">Do a boss+bounty combo for initial items/experience</td>
+					<td id="td-sj1e" class="cat1 sjtable sjitem rift not">Do a boss bounty for initial items/experience</td>
 					<td id="td-sj2e" class="cat2 sjtable sjitem rift not">Lvl 20: Equip your second passive skill</td>
 					<td class="sjtable empty">&nbsp;</td>
 					<td class="sjtable empty">&nbsp;</td>
@@ -231,9 +232,13 @@
 				<td width="770" align="justify" valign="top" colspan="2">
 					<div>Chosing your leveling strategy will depend if you are playing solo or in groups. Playing in groups is the most efficient since it applies the "Strength in Numbers" buff, which grants you gold find, magic find, and experience bonuses that are multiplicative to any pre-existing stats you have from items. Regardless of which leveling strategy you use, the following tips can help you get experience faster:</div>
 					<ul style="list-style-type:square;">
-					<li>Equip your highest Ruby gem on your helm to get an experience boost. Ideally, you would equip it in a <a href="https://us.diablo3.com/en/item/leorics-crown-Unique_Helm_002_p1" target="_blank">Leoric's Crown</a> which can increase the experience bonus of the Ruby by up to 100%.</li>
-					<li>Craft the <a href="https://us.diablo3.com/en/artisan/blacksmith/recipe/cains-memory" target="_blank">Cain's Fate</a> (lvl 23) and  <a href="https://us.diablo3.com/en/artisan/blacksmith/recipe/borns-impunity" target="_blank">Born's Defiance</a> (lvl 21) sets, which grant a +50% and +20% experience bonus, respectively. You will need to find the blacksmith plans to craft these sets.</li>
-					<li>Craft two-handed weapons at the blacksmith every 5 levels and socket a red gem for added power.</li>
+						<li>Equip your highest Ruby gem on your helm to get an experience boost. Ideally, you would equip it in a <a href="https://us.diablo3.com/en/item/leorics-crown-Unique_Helm_002_p1" target="_blank">Leoric's Crown</a> which can increase the experience bonus of the Ruby by up to 100%.</li>
+							<ul style="list-style-type:square;">
+								<li>Lower gems begin to drop around lvl 15. Once lvl 70, boss bounty chests guarantee gem drops.</li>
+								<li>If you are lucky and find a rainbow goblin while leveling, whimsyshire yields lvl 61+ gems regardless of your character lvl.</li>
+							</ul>
+						<li>Craft the <a href="https://us.diablo3.com/en/artisan/blacksmith/recipe/cains-memory" target="_blank">Cain's Fate</a> (lvl 23) and  <a href="https://us.diablo3.com/en/artisan/blacksmith/recipe/borns-impunity" target="_blank">Born's Defiance</a> (lvl 21) sets, which grant a +50% and +20% experience bonus, respectively. You will need to find the blacksmith plans to craft these sets.</li>
+						<li>Craft two-handed weapons at the blacksmith every 5 levels and socket a red gem for added power.</li>
 					</ul>
 					<div>Here are some of the most popular leveling strategies:</div>
 					<p></p>
@@ -354,13 +359,13 @@
 					<div align="center"><font color="#faac53">Snapshot Bounties</font></div>
 				</td>
 				<td width="770" valign="top" align="justify">
-					<div>This tip can only be done in groups and is only helpful if you are completing the Seasonal Journey as part of your progression plan to get your seasonal set. Following the steps below will allow you to run through Torment 6 bounties substantially faster with no need for additional multipliers. It is recommended to wait until level 33 to do this so all your party memebers have movement abilities.</div>
+					<div>This tip can only be done in groups and is only helpful if you are aiming to complete the Seasonal Journey fast as part of your progression plan to get your seasonal set. Following the steps below will allow you to run through Torment 6 bounties substantially faster with no need for additional multipliers. It is recommended to wait until level 33 to do this so all your party memebers have movement abilities, but this can be done earlier as well.</div>
 					<ul style="list-style-type:square;">
 						<li>A party member must leave the party, create a level 1 character, and open a Torment 6 game.</li>
-						<li>All other party members must join that game. The level 1 party member can now switch back to his lvl 33 character.</li>
+						<li>All other party members must join that game. The level 1 party member can now switch back to his lvl 33 character and rejoin.</li>
 						<li>This effectively snapshots the game at lvl 1, making completing the Torment 6 bounties easier.</li>
 					</ul>
-					<div>All party members should be able to one-shot all monsters and bosses with this trick, making completing bounties as part of the Season Journey faster. In contrast, running Torment 6 bounties once you finish leveling will take substantially longer as monsters and bosses scale up to lvl 70.</div>
+					<div>All party members should be able to one-shot all monsters and bosses in this new game, making completing bounties as part of the Season Journey faster while maintaining the Torment 6 rewards. In contrast, running Torment 6 bounties once you finish leveling will take substantially longer as monsters and bosses scale up to lvl 70.</div>
 				</td>
 			</tr>
 		</table>
@@ -417,17 +422,25 @@
 		<div align="center"><font size="3">Created and maintained by <b>Vanlioko#1916</b></font></div>
 		<div align="center"><font size="2">Work in progress - please consider providing feedback on these <a href="https://www.reddit.com/r/Diablo/comments/feo620/d3_quick_season_start_tracker_diabloseasons/" target="_blank">reddit</a> or <a href="https://www.diablofans.com/forums/diablo-forums/diablo-iii-general-discussion/240914-d3-quick-season-start-tracker-diabloseasons" target="_blank">diablofans</a> posts</font></div>
 		<div align="center"><font size="2">Tracker coding adapted from Season Journey Tracker by @bagstone1</font></div>
-		<button class="accordion"><font color="#D8D8D8">Last modified Mar 5, 2020: </font>[changelog]</button>
+		<button class="accordion"><font color="#D8D8D8">Last modified Mar 8, 2020: </font>[changelog]</button>
 		<div class="panel">
 		
 		<table align="center" width="900" style="border-spacing: 10px; background-color: rgba(155,155,155,0.07);" cellpadding="5px">
 			<tr>
 				<td valign="top" align="justify">
+					<div><font size="2"><font color="#faac53">Mar 8, 2020</font> - Updated content and fixed issues with feedback from reddit users</font></div>
+					<ul style="list-style-type:square;">
+						<li><font size="2">Fixed links and removed leftover text from tracker steps (u/mmmex)</font></li>
+						<li><font size="2">Added information about regular gems to Tip #3 (u/SyfaOmnis)</font></li>
+						<li><font size="2">Changed tracker order and added regular gems step in "Post" column (u/SyfaOmnis)</font></li>
+						<li><font size="2">Clarified reasoning/objectives behind snapshotting bounties in Tip #4 (u/ohitszie)</font></li>
+					</ul>
+					<p></p>
 					<div><font size="2"><font color="#faac53">Mar 5, 2020</font> - Added chance to upgrade to items listed to Roll/Upgrade Table</font></div>
 					<p></p>
 					<div><font size="2"><font color="#faac53">Mar 2, 2020</font> - Updated content based on feedback from <a href="https://www.twitch.tv/svr_90" target="_blank">sVr</a></font></div>
 					<ul style="list-style-type:square;">
-						<li><font size="2">Added changelog and discord tag for feedback</font></li>
+						<li><font size="2">Added changelog and reddit/diablofans posts for feedback</font></li>
 						<li><font size="2">Changed tracker order and added Hellfire Amulet step in "Post" column</font></li>
 						<li><font size="2">Changed "Upgrading Rare Weapon" description in Tip #2</font></li>
 						<li><font size="2">Changed Roll/Upgrade Table order to alphabetical and content to display correct levels and items</font></li>
@@ -530,7 +543,7 @@
 
 		// toggle entire column by clicking on header
 		$('th.header').click(function(event) {
-			var criterion = [0, 8, 7, 3, 2];
+			var criterion = [0, 8, 7, 4, 3];
 			var col = this.id.substr(3,4);
 			var s = 'abcdefgh';
 			if($('.cat'+col+'.done').length != criterion[col]) {
