--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 					<ul style="list-style-type:square;">
 						<li>Equip your highest Ruby gem on your helm to get an experience boost. Ideally, you would equip it in a <a href="https://us.diablo3.com/en/item/leorics-crown-Unique_Helm_002_p1" target="_blank">Leoric's Crown</a> which can increase the experience bonus of the Ruby by up to 100%.</li>
 							<ul style="list-style-type:square;">
-								<li>Lower gems begin to drop around lvl 15. Once lvl 70, boss bounty chests guarantee gem drops.</li>
+								<li>Lower gems begin to drop around lvl 15. Once lvl 18, boss bounty chests guarantee gem drops.</li>
 								<li>If you are lucky and find a rainbow goblin while leveling, whimsyshire yields lvl 61+ gems regardless of your character lvl.</li>
 							</ul>
 						<li>Craft the <a href="https://us.diablo3.com/en/artisan/blacksmith/recipe/cains-memory" target="_blank">Cain's Fate</a> (lvl 23) and  <a href="https://us.diablo3.com/en/artisan/blacksmith/recipe/borns-impunity" target="_blank">Born's Defiance</a> (lvl 21) sets, which grant a +50% and +20% experience bonus, respectively. You will need to find the blacksmith plans to craft these sets.</li>
@@ -366,6 +366,8 @@
 						<li>This effectively snapshots the game at lvl 1, making completing the Torment 6 bounties easier.</li>
 					</ul>
 					<div>All party members should be able to one-shot all monsters and bosses in this new game, making completing bounties as part of the Season Journey faster while maintaining the Torment 6 rewards. In contrast, running Torment 6 bounties once you finish leveling will take substantially longer as monsters and bosses scale up to lvl 70.</div>
+					<p></p>
+					<div>While splitting up acts between the different group members is the most fast/efficient, consider running boss bounties together to get ruby gems for their experience bonus when socketed on helms. The reward chests from boss bounties are guaranteed to yield regular gems after lvl 18.</div>
 				</td>
 			</tr>
 		</table>
