--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 					</ul>
 					<div>All party members should be able to one-shot all monsters and bosses in this new game, making completing bounties as part of the Season Journey faster while maintaining the Torment 6 rewards. In contrast, running Torment 6 bounties once you finish leveling will take substantially longer as monsters and bosses scale up to lvl 70.</div>
 					<p></p>
-					<div>While splitting up acts between the different group members is the most fast/efficient, consider running boss bounties together to get ruby gems for their experience bonus when socketed on helms. The reward chests from boss bounties are guaranteed to yield regular gems after lvl 18.</div>
+					<div>While splitting up acts between the different group members is the most efficient, consider running boss bounties together to get ruby gems for their experience bonus when socketed on helms. The reward chests from boss bounties are guaranteed to yield regular gems after lvl 18.</div>
 				</td>
 			</tr>
 		</table>
