--- a/index.html
+++ b/index.html
@@ -339,12 +339,19 @@
 				<td align="justify" valign="top" colspan="2">
 					<div><font color="#faac53"><b>Kanai's Stomping Grounds (Season  20 Only)</b></font></div>
 					<p></p>
-					<div>During season 20, a March-only event spawns in Act III - Ruins of Sescheron. To access it, players must follow the same path they would take to reach Kanai's Cube and get to the Elder Sanctum map. Once you have reached the cube, turn left and go straight through to Kanai's Throne Room. He will wake up and open up a portal to his stomping grounds where he will fight and kill monsters for you. Make sure your weapons are upgraded every other run, since Kanai's damage depends on your damage.</div>
+					<div>During season 20, a March-only event spawns in Act III - Ruins of Sescheron. To access it, players must follow the same path they would take to reach Kanai's Cube and get to the Elder Sanctum map. Once you have reached the cube, turn left and go straight through to Kanai's Throne Room. He will wake up and open up a portal to his stomping grounds where he will fight and kill monsters for you.</div>
 					<p></p>
 					<div align="center"><img src="resources/kanai.png" title="Elder Sanctum Map in Ruins of Sescheron - Act III"></div>
 					<div align="center"><font size="2">Elder Sanctum Map in Ruins of Sescheron - Act III</font></div>
 					<p></p>
-					<div>If done in Torment 6 difficulty, this can allow for speedy leveling. This temporary level has good monster density for massacre bonuses and grants a gold and experience reward upon completion. If elites are too tanky, just skip them, kill density, and repeat the event as many times as needed.</div>	
+					<div>If done repeatedly in Torment 1 to 6 difficulty, this can allow for speedy leveling. The event has good monster density for massacre bonuses and grants a gold and experience reward upon completion. The only challenge this method poses is getting to the event portal each time. Some tips to consider:</div>
+					<p></p>
+					<ul style="list-style-type:square;">
+						<li>Make sure your weapons are upgraded every other run, since Kanai's damage depends on your damage. Check vendors in Act V for potential upgrades.</li>
+						<li>If you are running this in groups, make sure everyone in your group tags all the monsters killed by Kanai to keep up the massacre bonus.</li>
+						<li>Mobility, crowd-control, and toughness skills/passives are crucial for this method.</li>
+						<li>The first map of Ruins of Sescheron has swinging blades you can lure monsters to get a few quick levels to reach a skill/passive that can help you survive the way to the event.</li>
+					</ul>
 				</td>
 			</tr>
 		</table>
