--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </script>
 <script data-ad-client="ca-pub-7985085162718459" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 <meta name="description" content="DiabloSeasons is a Diablo 3 resource website to containing trackers and guides for new, casual, and veteran players to achieve a quick season start in D3.">
-<title>D3 Quick Season 20 Start Tracker - DiabloSeasons</title>
+<title>D3 Quick Season 21 Start Tracker - DiabloSeasons</title>
 <script src="./resources/jquery-3.0.0.min.js.download"></script>
 <script src="./resources/jquery-ui.min.js.download"></script>
 <script src="./resources/functions.js.download"></script>
@@ -31,7 +32,7 @@
 				<td><img src="resources/d3logo.png" width="100" height="100"></td>
 				<td>
 					<div><font color="#faac53" size="6"><b>Quick Season Start Tracker</b></font></div>
-					<div><font color="#faac53" size="4"><i>Season 20: The Forbidden Archives</i></font></div>
+					<div><font color="#faac53" size="4"><i>Season 21: Trial of Tempests</i></font></div>
 				</td>
 			</tr>
 		</table>
